# lora-sample

./: CMakeLists.txt  Kconfig  README.rst  prj.conf
src/: main.c
